<resources>
    <string name="app_name">Github User App</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="public_repo">Public Repo</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="search">search</string>
    <string name="about">About me</string>
    <string name="title_about">About</string>
    <string name="content_about">Application Github User ver 1.0</string>
    <string name="lukas">lukas@wandb.com</string>
</resources>